Cleanup by Zarabadoo: Remove margin and padding from the #toolbar to prevent slight horizontal scrolling on mobile.

--- a/sass/responsive.custom.scss
+++ b/sass/responsive.custom.scss
@@ -83,6 +83,8 @@
   // The toolbar should not be persitently in view on small screens.
   #toolbar {
     position: static;
+    margin: 0;
+    padding: 0;
   }
 
   #toolbar-user {
